# simplewgconfig

./: README.md  com.github.yucefsourani.simplewgconfig.desktop  com.github.yucefsourani.simplewgconfig.json  com.github.yucefsourani.simplewgconfig.metainfo.xml  meson.build  simplewgconfig
